# paper-pulse

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
backend/agents/: base.py  example_agent.py
backend/common/: utils.py
backend/data_model/: paper.py
backend/llm/: __init__.py  provider_type.py
backend/pipeline/: graph.py  node_types.py  nodes.py  state.py
docs/: design.md  paper_summary.md
